--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,10 @@
 
         "files": ["src/helpers.php"]
     },
+    "require": {
+        "php": ">=7.0",
+        "ext-mbstring": "*"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.1"
     }
