--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "files": ["src/helpers.php"]
     },
     "require": {
-        "php": ">=7.0",
+        "php": "^7.0",
         "ext-mbstring": "*"
     },
     "require-dev": {
